hljs update + session + tweaks

--- a/404.html
+++ b/404.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="/static/css/style.css" rel="stylesheet" />
+        <!-- Default Required Resources -->
+        <meta charset="utf-8" />
+        <link
+            rel="alternate"
+            type="application/rss+xml"
+            title="Blog RSS"
+            href="//mehvix.com/posts/rss.xml"
+        />
+        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
         <script src="/static/js/include.js"></script>
 
-        <link
+        <!-- HLJS (try and remove if not used) -->
+        <!-- https://cdnjs.com/libraries/highlight.js -->
+        <!-- <link
             type="text/css"
             rel="stylesheet"
-            href="/static/css/atom-one-dark-reasonable.css"
+            href="/static/css/atom-one-dark.css"
         />
+        <script
+            src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"
+            integrity="sha512-MinqHeqca99q5bWxFNQEQpplMBFiUNrEwuuDj2rCSh1DgeeTXUgvgYIHZ1puBS9IKBkdfLMSk/ZWVDasa3Y/2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            hljs.highlightAll()
+        </script> -->
 
-        <meta charset="utf-8" />
         <title>Mehvix | 404</title>
         <style>
             :root {
@@ -34,7 +52,7 @@
             </p>
 
             <h1 style="text-align: center">
-                <a href="https://mehvix.com">Return home.</a>
+                <a href="//mehvix.com">Return home.</a>
             </h1>
 
             <h1 style="text-align: center">
