--- a/serverservices.html
+++ b/serverservices.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
-        <link
-            type="text/css"
-            rel="stylesheet"
-            href="static/css/atom-one-dark-reasonable.css"
-        />
-
+        <!-- Default Required Resources -->
+        <meta charset="utf-8" />
         <link
             rel="alternate"
             type="application/rss+xml"
             title="Blog RSS"
-            href="https://mehvix.com/posts/rss.xml"
+            href="//mehvix.com/posts/rss.xml"
         />
-        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-        <script>
-            hljs.initHighlightingOnLoad()
-        </script>
+        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
         <script src="/static/js/include.js"></script>
 
-        <meta charset="utf-8" />
+        <!-- HLJS (try and remove if not used) -->
+        <!-- https://cdnjs.com/libraries/highlight.js -->
+        <!-- <link
+            type="text/css"
+            rel="stylesheet"
+            href="/static/css/atom-one-dark.css"
+        />
+        <script
+            src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"
+            integrity="sha512-MinqHeqca99q5bWxFNQEQpplMBFiUNrEwuuDj2rCSh1DgeeTXUgvgYIHZ1puBS9IKBkdfLMSk/ZWVDasa3Y/2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            hljs.highlightAll()
+        </script> -->
+
         <title>Mehvix | Server</title>
         <style>
             :root {
@@ -39,9 +47,9 @@
             </div>
 
             <p>
-                <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well
-                as all other services, have moved to invite-only model. Please
-                do not contact me requesting an invite.
+                <a href="//cloud.mehvix.com">cloud.mehvix.com</a>, as well as
+                all other services, have moved to invite-only model. Please do
+                not contact me requesting an invite.
             </p>
 
             <!--If you're interested in any of these or have any questions, my contact information is on the
@@ -50,7 +58,7 @@
 
         <div style="padding-top: 1em">
         <b style="font-size: 100%">File Hosting and Media Streaming</b><br>
-            I’m selfhosting a Nextcloud instance at <a href="https://cloud.mehvix.com">cloud.mehvix.com</a> which
+            I’m selfhosting a Nextcloud instance at <a href="//cloud.mehvix.com">cloud.mehvix.com</a> which
             acts as a file hosting service and has addons for WebCAL, Tasks, Contacts, a password manager, and a
             non-intrusive map service. Here's pricing:
             <blockquote>
