--- a/todo.html
+++ b/todo.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link
-            type="text/css"
-            rel="stylesheet"
-            href="static/css/atom-one-dark-reasonable.css"
-        />
-
+        <!-- Default Required Resources -->
+        <meta charset="utf-8" />
         <link
             rel="alternate"
             type="application/rss+xml"
             title="Blog RSS"
-            href="https://mehvix.com/posts/rss.xml"
+            href="//mehvix.com/posts/rss.xml"
         />
-        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
-        <script>
-            hljs.initHighlightingOnLoad()
-        </script>
+        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
         <script src="/static/js/include.js"></script>
-        <meta charset="utf-8" />
+
+        <!-- HLJS (try and remove if not used) -->
+        <!-- https://cdnjs.com/libraries/highlight.js -->
+        <!-- <link
+            type="text/css"
+            rel="stylesheet"
+            href="/static/css/atom-one-dark.css"
+        />
+        <script
+            src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"
+            integrity="sha512-MinqHeqca99q5bWxFNQEQpplMBFiUNrEwuuDj2rCSh1DgeeTXUgvgYIHZ1puBS9IKBkdfLMSk/ZWVDasa3Y/2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            hljs.highlightAll()
+        </script> -->
+
         <title>Mehvix | #todo</title>
         <style>
             :root {
@@ -72,7 +81,7 @@
                     <li>
                         Prevents
                         <a
-                            href="https://old.reddit.com/r/Jon_Bois/comments/ab6930/does_anyone_happen_to_have_pretty_good_episode_4/"
+                            href="//old.reddit.com/r/Jon_Bois/comments/ab6930/does_anyone_happen_to_have_pretty_good_episode_4/"
                             >this</a
                         >
                         from happening again.
@@ -80,8 +89,8 @@
 
                     <li>
                         Possible with
-                        <a href="https://zapier.com">zapier</a> and
-                        <a href="https://github.com/ytdl-org/youtube-dl"
+                        <a href="//zapier.com">zapier</a> and
+                        <a href="//github.com/ytdl-org/youtube-dl"
                             >youtube-dl</a
                         >
                     </li>
@@ -89,13 +98,13 @@
 
                 <h1>
                     Visualize
-                    <a href="https://play.typeracer.com/">Typeracer</a> data
+                    <a href="//play.typeracer.com/">Typeracer</a> data
                 </h1>
                 <ul>
                     <li>
                         I did something
                         <a
-                            href="https://github.com/Mehvix/synapsBotRW/blob/master/typeracer.py"
+                            href="//github.com/Mehvix/synapsBotRW/blob/master/typeracer.py"
                             >similar already</a
                         >
                     </li>
@@ -103,7 +112,7 @@
                     <li>
                         Should be possible to scrap
                         <a
-                            href="https://data.typeracer.com/pit/race_history?user=mehvix&amp;n=9999&amp;startDate="
+                            href="//data.typeracer.com/pit/race_history?user=mehvix&amp;n=9999&amp;startDate="
                             >this webpage</a
                         >
                         and save it as a <code>.csv</code>
@@ -112,7 +121,7 @@
 
                 <h1>
                     Create a
-                    <a href="https://old.reddit.com/r/startpages">Startpage</a>
+                    <a href="//old.reddit.com/r/startpages">Startpage</a>
                 </h1>
 
                 <h1>
@@ -123,14 +132,14 @@
                 <ul>
                     <li>
                         Similar to
-                        <a href="https://www.getintention.com/"> Intention</a>
+                        <a href="//www.getintention.com/"> Intention</a>
                     </li>
                 </ul>
 
                 <h1>Design / 3D print a custom mouse using G305 internals</h1>
                 <ul>
                     <li>
-                        <a href="https://www.reddit.com/r/MouseReview/"
+                        <a href="//www.reddit.com/r/MouseReview/"
                             >/r/MouseReview</a
                         >
                         has some good resources
@@ -144,7 +153,7 @@
                 <h1>Successfully 3D print a key</h1>
                 <ul>
                     <li>
-                        <a href="https://youtu.be/7kJnGZlirpI"
+                        <a href="//youtu.be/7kJnGZlirpI"
                             >Interesting talk on 3D printing keys</a
                         >
                     </li>
@@ -165,9 +174,7 @@
                 <ul>
                     <li>
                         Integrate with
-                        <a href="https://github.com/Mehvix/Equalizer"
-                            >Equalizer?</a
-                        >
+                        <a href="//github.com/Mehvix/Equalizer">Equalizer?</a>
                     </li>
                 </ul>
 
@@ -175,13 +182,13 @@
                 <ul>
                     <li>
                         <a
-                            href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident"
+                            href="//en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident"
                             >Wikipedia Article</a
                         >
                     </li>
                     <li>
                         <a
-                            href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC"
+                            href="//www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC"
                             >Jon Bois's Pretty Good Series</a
                         >
                     </li>
