--- a/quotes.html
+++ b/quotes.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
-        <link
-            type="text/css"
-            rel="stylesheet"
-            href="static/css/atom-one-dark-reasonable.css"
-        />
-
+        <!-- Default Required Resources -->
+        <meta charset="utf-8" />
         <link
             rel="alternate"
             type="application/rss+xml"
             title="Blog RSS"
-            href="https://mehvix.com/posts/rss.xml"
+            href="//mehvix.com/posts/rss.xml"
         />
-
-        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-        <script>
-            hljs.initHighlightingOnLoad()
-        </script>
+        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
         <script src="/static/js/include.js"></script>
-        <meta charset="utf-8" />
+
+        <!-- HLJS (try and remove if not used) -->
+        <!-- https://cdnjs.com/libraries/highlight.js -->
+        <!-- <link
+            type="text/css"
+            rel="stylesheet"
+            href="/static/css/atom-one-dark.css"
+        />
+        <script
+            src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"
+            integrity="sha512-MinqHeqca99q5bWxFNQEQpplMBFiUNrEwuuDj2rCSh1DgeeTXUgvgYIHZ1puBS9IKBkdfLMSk/ZWVDasa3Y/2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            hljs.highlightAll()
+        </script> -->
+        
         <title>Mehvix | Quotes</title>
         <style>
             :root {
@@ -69,7 +77,7 @@
                             eat orange give me you.
                         </blockquote>
                         <p>
-                            <a href="https://en.wikipedia.org/wiki/Nim_Chimpsky"
+                            <a href="//en.wikipedia.org/wiki/Nim_Chimpsky"
                                 >Nim Chimpsky</a
                             >
                         </p>
@@ -96,9 +104,7 @@
                             Maybe that's the best you can do.
                         </blockquote>
                         <p>
-                            <a href="https://youtu.be/PsiZmSkN3yo"
-                                >Terry Davis</a
-                            >
+                            <a href="//youtu.be/PsiZmSkN3yo">Terry Davis</a>
                         </p>
                     </div>
 
@@ -116,9 +122,7 @@
                             later.
                         </blockquote>
                         <p>
-                            <a href="https://youtu.be/bDt90EyZnWA?t=1651"
-                                >Jon Bois</a
-                            >
+                            <a href="//youtu.be/bDt90EyZnWA?t=1651">Jon Bois</a>
                         </p>
                     </div>
 
@@ -130,7 +134,7 @@
                         </blockquote>
                         <p>
                             <a
-                                href="https://www.bloomberg.com/news/articles/2011-04-14/this-tech-bubble-is-different"
+                                href="//www.bloomberg.com/news/articles/2011-04-14/this-tech-bubble-is-different"
                                 >Jeff Hammerbacher</a
                             >
                         </p>
@@ -147,7 +151,7 @@
                         </blockquote>
                         <p>
                             <a
-                                href="https://sciencedemonstrations.fas.harvard.edu/presentations/tennis-racquet-flip"
+                                href="//sciencedemonstrations.fas.harvard.edu/presentations/tennis-racquet-flip"
                                 >Source</a
                             >
                         </p>
@@ -212,9 +216,7 @@
                             </div>
                         </blockquote>
                         <p>
-                            <a href="https://youtu.be/ndmBCqds_gc?t=269"
-                                >Jon Bois</a
-                            >
+                            <a href="//youtu.be/ndmBCqds_gc?t=269">Jon Bois</a>
                         </p>
                     </div>
 
@@ -234,7 +236,7 @@
                         </blockquote>
                         <p>
                             <a
-                                href="https://public.wsu.edu/~campbelld/crane/black.htm"
+                                href="//public.wsu.edu/~campbelld/crane/black.htm"
                                 >Stephen Crane</a
                             >
                         </p>
@@ -286,7 +288,7 @@
                         </blockquote>
                         <p>
                             <a
-                                href="https://qblog.aaronsw.com/post/35407236090/a-libertarian-puzzle"
+                                href="//qblog.aaronsw.com/post/35407236090/a-libertarian-puzzle"
                                 >Aaron Swartz</a
                             >
                         </p>
@@ -315,9 +317,7 @@
                             just found that incredible
                         </blockquote>
                         <p>
-                            <a href="https://youtu.be/9l5C8cGMueY?t=1198"
-                                >Jon Bois</a
-                            >
+                            <a href="//youtu.be/9l5C8cGMueY?t=1198">Jon Bois</a>
                         </p>
                     </div>
                 </article>
