--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                         class="hidden"
                     />
                     at UW-Madhacks 2019. I'm an incoming freshmen at
-                    <a href="//www.berkeley.edu/">UC Berkeley</a> studying
-                    <a href="//eecs.berkeley.edu/">EECS</a>.
+                    <a href="//www.berkeley.edu/">UC Berkeley</a> planning on
+                    majoring in <a href="//eecs.berkeley.edu/">EECS</a> (and/or)
+                    <a href="//me.berkeley.edu/">MechE</a>.
                     <script>
                         document.write(attr_selected)
                     </script>
@@ -124,7 +125,7 @@
                 </p>
                 <p>
                     I created this website because I believe the web is better
-                    decentralized and to also force myself into writting more
+                    decentralized and to also force myself into writing more
                     often so that I can improve communicating ideas through my
                     <a href="/posts/index.html">blog</a>.
                 </p>
@@ -174,14 +175,14 @@
                                             display: inline;
                                             float: right;
                                         "
-                                    ><code style="margin: 0; width: 42ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                    ><code style="margin: 0; width: 43ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
                                     <img
                                         alt="Expand image"
                                         src="/static/media/expandoImage.svg"
                                         class="dropdown"
                                         onclick="toggleImage(session)"
                                         style="
-                                            margin: 0.66ch;
+                                            margin: 0.5ch;
                                             height: 1.66em;
                                             float: right;
                                             display: inline;
