--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <!-- Default Required Resources -->
         <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=569,
+    maximum-scale=1"
+        />
         <link
             rel="alternate"
             type="application/rss+xml"
@@ -175,7 +180,7 @@
                                             display: inline;
                                             float: right;
                                         "
-                                    ><code style="margin: 0; width: 43ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                    ><code style="margin: 0; width: 41.23ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
                                     <img
                                         alt="Expand image"
                                         src="/static/media/expandoImage.svg"
@@ -260,6 +265,14 @@
                                     >RSS</a
                                 >)
                                 <!-- todo generate sublist of last 5 blog posts -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="//toolbox.mehvix.com">Toolbox</a></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="//notes.mehvix.com">Notes</a>
                             </td>
                         </tr>
                         <tr>
