--- a/index.html
+++ b/index.html
@@ -174,25 +174,25 @@
                             <tr>
                                 <td>Session</td>
                                 <td style="vertical-align: middle">
+                                    <img
+                                        alt="Session QR Expand"
+                                        src="/static/media/expandoImage.svg"
+                                        class="dropdown"
+                                        onclick="toggleImage(session)"
+                                        style="
+                                            margin: 0 0.5ch;
+                                            height: 30.75px;
+                                            float: right;
+                                            display: inline;
+                                        "
+                                    />
                                     <pre
                                         style="
                                             margin: 0;
                                             display: inline;
                                             float: right;
                                         "
-                                    ><code style="margin: 0; width: 41.23ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
-                                    <img
-                                        alt="Expand image"
-                                        src="/static/media/expandoImage.svg"
-                                        class="dropdown"
-                                        onclick="toggleImage(session)"
-                                        style="
-                                            margin: 0.5ch;
-                                            height: 1.66em;
-                                            float: right;
-                                            display: inline;
-                                        "
-                                    />
+                                    ><code style="margin: 0; width: 52vw; max-width: 42ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
                                 </td>
                             </tr>
                         </tbody>
@@ -292,31 +292,16 @@
                 <table id="footerTable">
                     <tr>
                         <td>$BTC</td>
-                        <td>
-                            <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">
-                                15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1
-                            </a>
+                        <td>15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</td>
+                    </tr>
+                    <tr>
+                        <td>$XMR</td>
+                        <td>45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ</a>
                         </td>
                     </tr>
                     <tr>
                         <td>$ETH</td>
-                        <td>
-                            <a
-                                href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
-                                >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>$XMR</td>
-                        <td class="cryptoaddy" style="max-width: inherit">
-                            <a
-                                href="xmr:45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ"
-                                class="cryptoaddy"
-                            >
-                                45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
-                            </a>
-                        </td>
+                        <td>0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</td>
                     </tr>
                     <tr>
                         <td id="footerDateYear">2021</td>
